...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#FF0000" />

    <TextView
        android:id="@+id/eventManagementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_title"
        android:textColor="?attr/defaultSubtitleTextColor"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/underTitleGuideLine"
...
            app:layout_constraintTop_toTopOf="@+id/peopleGuideline"
            app:layout_constraintVertical_bias="0.305" />

    </HorizontalScrollView>

    <EditText
        android:id="@+id/editTextEventManagementLocation"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:autofillHints="AUTOFILL_HINT_POSTAL_ADDRESS"
        android:ems="10"
        android:hint="@string/default_enter_location"
        android:inputType="textPostalAddress"
...
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toTopOf="@+id/visibilityGuideline"
        app:layout_constraintVertical_bias="0.511" />

    <EditText
        android:id="@+id/eventManagementEditTextDescription"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/default_enter_description"
        android:importantForAutofill="no"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toTopOf="@+id/tagsGuideline"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/editTextEventManagementTitle"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/default_enter_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toTopOf="@+id/underTitleGuideLine"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEventManagementBeginningDate"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date_hint"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftMarginGuideline"
        app:layout_constraintTop_toTopOf="@+id/dateGuideline"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEventManagementEndDate"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date_hint"
        android:importantForAutofill="no"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="656dp" />

    <Button
        android:id="@+id/submitManageEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/buttonColor"
        android:text="@string/default_create_string"
        android:textColor="?attr/defaultWhiteWhite"
...
