<resources>
    <string name="app_name">JoinAlong</string>
    <!--ManageChat Strings-->
    <string name="create_chat_title">Create Chat</string>
    <!--ManageEvent Strings-->
    <string name="create_event_title">Create Event</string>
    <string name="date_hint">YYYY/MM/DD</string>
    <string name="time_hint">HH:MM</string>
    <!--ReportActivity Strings-->
    <string name="create_report_text">Report</string>
    <string name="reporting_message">Thanks for looking out for our community! \nPlease take some time to enter some additional details!</string>
    <string name="enter_reason_hint">Enter Reason</string>
...
    <string name="default_friends">Friends</string>
    <string name="default_requests">Requests</string>
    <string name="default_search_people">Search People</string>
    <string name="default_messaging">Messaging</string>
    <string name="default_messages">Messages</string>
    <string name="default_search">Search</string>
    <string name="default_search_no_results">No Results Found</string>
    <string name="default_friends_no_results">No Friends Found</string>
    <string name="default_requests_no_results">No Requests Found</string>
    <string name="default_chats_no_results">No Chats Found</string>
    <string name="default_description">Description</string>
    <string name="default_view_reports">View Reports</string>
    <string name="default_report_type_subtitle">Report Type</string>
...
