<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayoutSearch"
    android:background="?attr/backgroundColor"
    tools:context=".SearchScreenActivity">


    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:textColor="?attr/defaultTextColor"
        android:layout_marginRight="5dp"
        android:gravity="right"
        android:iconifiedByDefault="false"
        android:queryHint="@string/default_search">

    </SearchView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />

    <ImageButton
        android:id="@+id/reportBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="top"

        android:layout_marginLeft="5dp"


        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:src="?attr/actionModeCloseDrawable" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchPeopleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="675dp"
        android:layout_gravity="bottom" />

    <TextView
        android:id="@+id/searchNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="?attr/defaultTextColor"
        android:text="@string/default_search_no_results" />


</FrameLayout>