<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewEventConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:clickable="true"
    tools:context="com.joinalongapp.navbar.ViewEventFragment">

...
        android:textColor="?attr/defaultSubtitleTextColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="@+id/guideline29" />

    <TextView
        android:id="@+id/viewEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="314dp"
        android:maxHeight="64dp"
        android:text="@string/view_events_default_title"
        android:textColor="?attr/defaultTextColor"
...
